--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -23,12 +23,12 @@
 
   <div>
     <%= form.label :cee_marks, style: "display: block" %>
-    <%= form.number_field :cee_marks %>
+    <%= form.number_field :cee_max %>
   </div>
 
   <div>
     <%= form.label :see_marks, style: "display: block" %>
-    <%= form.number_field :see_marks %>
+    <%= form.number_field :see_max %>
   </div>
 
   <div>
