--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -27,8 +27,8 @@
     </td>
     
     <td><%= course.course_name %></td>
-    <td><%= course.cee_marks %></td>
-    <td><%= course.see_marks %></td>
+    <td><%= course.cee_max %></td>
+    <td><%= course.see_max %></td>
     
     
     <td>
