--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -9,8 +9,8 @@
   <p class="lead">
     
     <%= @course.course_code %>  |  
-    <%= @course.cee_marks %> |
-    <%= @course.see_marks %>  
+    <%= @course.cee_max %> |
+    <%= @course.see_max %>  
   </p>
   <br/>
   <%= link_to "Edit this course", edit_course_path(@course) , class:"btn btn-secondary"%> 
