--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -10,7 +10,7 @@
     
     <%= @student.usn %>  |  
     <%= @student.gender %> |
-    <%= @student.phone_number %>  
+    <%= @student.phonenumber %>  
   </p>
   <br/>
 
