--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -10,9 +10,9 @@
   <td>
     <%= course.course_name %>
 </td>
-   <td> <%= course.cee_marks %>
+   <td> <%= course.cee_max %>
 </td>
-   <td> <%= course.see_marks %>
+   <td> <%= course.see_max %>
   </td>
 </tr>
 </div>
