--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -27,7 +27,7 @@
     
     <td><%= student.name %></td>
     <td><%= student.gender %></td>
-    <td><%= student.phone_number %></td>
+    <td><%= student.phonenumber %></td>
     
     
     <td>
