--- a/app/views/results/result.html.erb
+++ b/app/views/results/result.html.erb
@@ -1,4 +1,4 @@
-<h1>results</h1>
+
 
 
 
@@ -15,27 +15,54 @@
     <h1>usn</h1>   <%= learner.usn%>
     <h2>name</h2> <%= learner.name%>
 <%end%>  
-<table style="border:2px solid black">
-<tr><th> course code</th><th>course name</th><th>total</th><th>remarks</th></tr>
 
-<%@subs.each do |sub|%>
-    <tr>
-    <td><%= sub.course_code%></td><td><%= sub.course_name%></td>
 
-    <%end%>
+
+<div class="row">
+  <div class="table-responsive col-md-6">
       
-    <%@marks.each do|mark|%>
-        <% @cee=mark.cee_obtained%>
-        <% @see=mark.see_obtained%>
-    
-        <% @total= @cee+@see%>
-        <td><%=@total%></td>
-      
-        <%if @total > 45 %>
-          <td>  <%= "pass"%></td>
-        <%else %>
-          <td>  <%= "fail"%></td>
+       
+
+    <table class="table table-bordered">
+
+         <tr><th> course code</th><th>course name</th></tr>
+
+         <%@subs.each do |sub|%>
+           <tr>
+           <td><%= sub.course_code%></td><td><%= sub.course_name%></td>
+           </tr>
+         <%end%>
+    </table>
+  
+  </div>
+  <div class="table-responsive col-md-6">
+     
+      <table class="table table-bordered">
+
+        <tr><th> total</th><th>remarks</th></tr>
+  
+        <%@marks.each do|mark|%>
+          <tr><% @cee=mark.cee_obtained%>
+          <% @see=mark.see_obtained%>
+
+          <% @total= @cee+@see%>
+          <td><%=@total%></td>
+
+          <%if @total > 45 %>
+                <td>  <%= "pass"%></td>
+          <%else %>
+                <td>  <%= "fail"%></td>
+          <%end%>
+  
+          </tr>
+   
         <%end%>
-        </tr> 
-    <%end%>
-</table>
+      </table>
+  
+  </div>
+</div>
+
+
+
+
+
