--- a/app/views/checkres/checkresult.html.erb
+++ b/app/views/checkres/checkresult.html.erb
@@ -1,8 +1,5 @@
 
-
-
-
-<%= form_tag(results_result_path, :method=>"get" )do %>
+<%= form_tag(checkres_checkresult_path, :method=>"get" )do %>
     <%= label_tag(:search, "enter usn:")%>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag("search", :usn=>nil)%>  
