added results crud

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -25,6 +25,9 @@
             <%= link_to 'add courses ', new_course_path, class:"nav-link"%>
         </li> 
         <li class="nav-item">
+            <%= link_to 'result ', results_path, class:"nav-link"%>
+        </li> 
+        <li class="nav-item">
             <%= link_to 'check result ', checkres_checkresult_path, class:"nav-link"%>
         </li>     
     </ul>
