--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div>
     <%= form.label :phone_number, style: "display: block" %>
-    <%= form.number_field :phone_number %>
+    <%= form.number_field :phonenumber %>
   </div>
 
   <div>
