--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <%= form.label :phone_number, style: "display: block" %>
+    <%= form.label :phonenumber, style: "display: block" %>
     <%= form.number_field :phonenumber %>
   </div>
 
