--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container" style="background-color:lightblue">
 <br>
 <center><h1>welcome to students results website</h1>
+<%= image_tag "front.jpg", height: 500%>
 <br><br>
-<%= image_tag "about4.jpg", height: 200%>
 
 <quotes><b><i>" The best way to predict your future is to create it " </i>
 <br>~Abraham Lincoln</b></quotes>
