--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -33,7 +33,7 @@
             <%= link_to 'result ', results_path, class:"nav-link"%>
         </li> 
         <li class="nav-item">
-          <%= link_to 'sign out ', destroy_admin_session_path,method: :delete, class:"nav-link"%>
+          <%= link_to 'sign out ', destroy_admin_session_path, :method => :delete, class:"nav-link"%>
         </li>
         <li class="nav-item">
            <%= link_to 'edit profile ', edit_admin_registration_path, class:"nav-link"%>
