--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -21,6 +21,7 @@
 <%= form.label :course_code, style: "display: block" %>
 <%= form.text_field :course_code %>
 </div>
+<div>
     <%= form.label :cee_obtained, style: "display: block" %>
     <%= form.text_field :cee_obtained %>
   </div>
